--- a/htmls/recitales.html
+++ b/htmls/recitales.html
@@ -28,7 +28,7 @@
    
     <main>
         <h3>Ultimos recitales</h3>
-            <div class="iframes">
+            <div class="iframe">
                 <iframe width="750" height="315" src="https://www.youtube.com/embed/prYx3Yttc50" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 <iframe width="750" height="315" src="https://www.youtube.com/embed/DAZiwLmgAgc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/pHwDiOJXW-c" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
