--- a/htmls/recitales.html
+++ b/htmls/recitales.html
@@ -6,8 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Arctic Monkeys</title>
     <link rel="icon" href="../fotos/ico.png">
-    <link rel="stylesheet" href="../css/estilo.css">
+    <link rel="stylesheet" href="../scss/estilo.css">
+    <link rel="description" href="Ultimos recitales articos">
+    <link rel="keywords" href="Musica, rock, rock actual, rock viejo, rock alternativo, Arctics monkeys">
 </head>
+
 <body>
     
     <header id="arriba">
