--- a/htmls/historia.html
+++ b/htmls/historia.html
@@ -6,7 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Arctic Monkeys</title>
     <link rel="icon" href="../fotos/ico.png">
-    <link rel="stylesheet" href="../css/estilo.css">
+    <link rel="stylesheet" href="../scss/estilo.css">
+    <link rel="description" href="La historia artica">
+    <link rel="keywords" href="Musica, rock, rock actual, rock viejo, rock alternativo, Arctics monkeys">
+</head>
 </head>
 <body>
     <header id="arriba">
