--- a/htmls/login.html
+++ b/htmls/login.html
@@ -7,7 +7,10 @@
     <title>The Arctic Monkeys</title>
     <link rel="icon" href="../fotos/ico.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/estilo.css">
+    <link rel="stylesheet" href="../scss/estilo.csss">
+    <link rel="description" href="Se parte del mundo artico">
+    <link rel="keywords" href="Musica, rock, rock actual, rock viejo, rock alternativo, Arctics monkeys">
+</head>
 
 </head>
 <body>
