--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Arctic Monkeys</title>
-    <link rel="stylesheet" href=".//css/estilo.css">
+    <link rel="stylesheet" href="./scss/estilo.css">
     <link rel="icon" href="./fotos/ico.png">
+    <link rel="description" href="El nuevo rock viejo">
+    <link rel="keywords" href="Musica, rock, rock actual, rock viejo, rock alternativo, Arctics monkeys">
     
 </head>
 <body>
